func for ajax post/get and page render complete, css fixed for proper spacing in tweet boxes

--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -1,10 +1,13 @@
 #tweet-container {
   display: flex;
-  border: 0.2em solid #767676;
   flex-direction: column;
 }
 
-#tweet-container:hover {
+.tweet {
+  border: 0.2em solid #767676;
+  margin-bottom: 10px;
+}
+.tweet:hover {
   box-shadow: .2em .2em lightgray ;
 }
 .tweetheader {
